--- a/autenticacionOAuth2.0/blog/views/footer.pug
+++ b/autenticacionOAuth2.0/blog/views/footer.pug
@@ -3,7 +3,7 @@ footer.footer
         .level
             .level-left
                 .level-item
-                    img.logo.is-large(src='/static/logo/felida-music@2x.png')
+                    img.logo.is-large(src='/static/logo/fetida-music@2x.png')
             .level-right
                 .level-item
                     span.icon.is-large.has-text-primary
@@ -21,4 +21,4 @@ footer.footer
                     small Share and add the best playlists from the community
             .level-left
                 .level-item.has-text-grey
-                    small= `Felida Music ${new Date().getFullYear()} | All rights reserved`        
+                    small= `Fetida Music ${new Date().getFullYear()} | All rights reserved`        
