--- a/autenticacionOAuth2.0/blog/views/layout.pug
+++ b/autenticacionOAuth2.0/blog/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    title Felida Music | Blog
+    title Fetida Music | Blog
     link(rel='icon' type='image/png' sizes='32x32' href='/static/favicon.png')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css')
     link(rel='stylesheet' href='/static/assets/main.css')
