--- a/autenticacionOAuth2.0/blog/views/posts.pug
+++ b/autenticacionOAuth2.0/blog/views/posts.pug
@@ -4,7 +4,7 @@ block hero
   section.hero.is-dark.is-medium.main-hero
     .hero-body
       .container
-        h1.title.is-size-1 Felida Music
+        h1.title.is-size-1 Fetida Music
         h2.subtitle Share and add the best playlists from the community
 
 
