--- a/autenticacionOAuth2.0/blog/views/layout.pug
+++ b/autenticacionOAuth2.0/blog/views/layout.pug
@@ -2,8 +2,8 @@ doctype html
 head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    //- meta(name='google-signin-scope' content='profile email')
-    //- meta(name='google-signin-client_id' content='423821609802-v4iahkrurate7ptg4r2uk8prgv9tcbdh.apps.googleusercontent.com')
+    meta(name='google-signin-scope' content='profile email')
+    meta(name='google-signin-client_id' content='423821609802-v4iahkrurate7ptg4r2uk8prgv9tcbdh.apps.googleusercontent.com')
     title Fetida Music | Blog
     link(rel='icon' type='image/png' sizes='32x32' href='/static/favicon.png')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css')
@@ -13,6 +13,6 @@ body
     block hero
     block content
     include footer.pug
-    //- script(src='/static/assets/main.js')
+    script(src='/static/assets/main.js')
     script(defer src='https://use.fontawesome.com/releases/v5.3.1/js/all.js')
-    //- script(async defer src='https://apis.google.com/js/platform.js')
+    script(async defer src='https://apis.google.com/js/platform.js')
